tests/ui/parse_key.stderr
error[E0609]: no field `s` on type `&'static str`
 --> $DIR/parse_key.rs:5:16
  |
5 |     json!({ "".s : true });
  |                ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0609`.
