tests/ui/parse_key.rs
#[macro_use]
extern crate serde_json;

fn main() {
    json!({ "".s : true });
}
